--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
       <div class="box">
           <img src="/./img/CSS3.png" alt="css3">
-        <h3>CSS3 Styling</h3>
+        <h3>CSS3</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio facilis consequuntur odit officia culpa quibusdam!</p>
       </div>
       <div class="box">
