--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio facilis consequuntur odit officia culpa quibusdam!</p>
       </div>
       <div class="box">
-          <img src="./img/CSS3.png">
+          <img src="./img/css3.png">
         <h3>CSS3</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio facilis consequuntur odit officia culpa quibusdam!</p>
       </div>
